# logtools

./: .gitignore  .pylintrc  LICENSE.txt  README.rst  check.bat  clean.py  code-check.bat  code-fix.bat  pylint_check.bat  pyproject.toml  requirements.txt  run.bat  setup.py  uninstall.bat
src/logtools/: __init__.py  __main__.py  gui_log_display.py  gui_log_displays.py  gui_log_panel.py  gui_main_frame.py  gui_pattern_edit.py  gui_search_panel.py  log_block.py  log_blocks.py  log_data.py  log_group.py  log_groups.py  log_pattern.py  log_patterns.py  main.py  patterns.yml  user_files.py  utils.py
src/logtools/samples/: logtools.txt  rules.yml
tests/: conftest.py  test_log_pattern.py  test_log_patterns.py  test_patterns.yml  test_user_files.py
tests/test_resources/: rules.yml  test_patterns_2.yml
